[project]
name = "md2redbook"
version = "2.0.0"
description = "小红书笔记素材创作工具 - 支持多种排版样式和智能分页"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "markdown>=3.4.0",
  "PyYAML>=6.0",
  "playwright>=1.40.0",
  "xhs==0.2.13",
  "python-dotenv>=1.0.0",
  "requests>=2.28.0",
]

[tool.uv]
package = false
